# APO_13_C-C-_hw-1

./: .travis.yml  CMakeLists.txt  README.md  text.txt
hw-1/: CMakeLists.txt  main.c  parser.c  parser.h  vector.c  vector.h
include/: parser.h  vector.h
include/testy/: parser.h  vector.h
src/: main.c  parser.c  vector.c
test/: test_parser.cpp
